modules/gdscript/tests/scripts/analyzer/errors/access_level_protected_func_callable.gd
class Foo:
    protected func foo():
        pass

func test():
    var f := Foo.new()
    var t = f.foo
    t.call()
